--- a/listas.tex
+++ b/listas.tex
@@ -1646,7 +1646,7 @@ Calculando os determinantes utilizando o Teorema de Laplace, por exemplo, temos 
 \]
 \task[\pers{b}] Observe que 
 \[
-x_1 = \sen^2 \left(  \right)
+x_1 = \sen^2 \left( \frac{4 \pi}{7} \right), x_1 = \sen^2 \left( \frac{4 \pi}{7} \right) \
 \]
 
 }
