--- a/main.tex
+++ b/main.tex
@@ -3171,7 +3171,7 @@ O teorema de Riesz não é válido para espaços com produto interno de dimensã
 \begin{definicao}
 Agora seja $V$ um espaço com produto interno e $S$ um subconjunto de $V$. Definimos o conjunto:
 \[
-S^\perp=\{v\in V:\mid \forall s\in S:\langle v,s\rangle=0\},
+S^\perp=\{v\in V\,\colon \forall s\in S \,\colon\langle v,s\rangle=0\},
 \]
 e chamamos de \textbf{complemento ortogonal} de $S$.
 \end{definicao}
@@ -3188,7 +3188,7 @@ Para qualquer subconjunto $S$ temos:
 \begin{itemize}
 \item[2)] Escolhemos em $W$ uma base ortonormal $(v_1,\dots,v_k)$. Seja $u\in V$ arbitrário. Consideremos:
 \[
-\tilde{u}=\langle u,v_1\rangle v_1+dots+\langle u,v_k\rangle v_k\in W.
+\tilde{u}=\langle u,v_1\rangle v_1+\dots+\langle u,v_k\rangle v_k\in W.
 \]
 Provemos que $u-\tilde{u}\in W^\perp$. Notemos que $W^\perp=\{v_1,\dots,v_k\}^\perp$. Para $i=1,\dots,k$, então temos:
 \[
